CVS HEAD
  * Added support for escape sequences

jlscp v0.5a: 2007-05-24
  * Implemented instruments database support
  * All notifications are now processed through the LSCP event thread

jlscp v0.4a: 2007-04-02
  * Implemented support for managing MIDI instrument maps.

  * Implemented support for managing Effect Sends.

  * Implemented print-only mode: Print-only mode means that the
    client will just print all LSCP commands to the specified output
    stream or to the standard output stream (java.lang.System.out) if
    no output stream is specified, without taking any further actions.
    
  * API Changes
	   - Client: 
	   - Device, AbstractDevice: added getActiveParameter method
	   - AudioOutputDevice: added getAllParameters method

jlscp v0.3a: 2005-10-10
	* Significantly speeded up the transfer by setting the socket
	  property TcpNoDelay to true

	* Added Mute and Solo support for sampler channels
	   - Client: setChannelMute, setChannelSolo
	   - SamplerChannel: isMuted, isMutedBySolo, isSoloChannel

	* Added support for monitoring the total number of active voices
	   - New classes for handling events: TotalVoiceCountEvent and
	     TotalVoiceCountListener
	   - Client: added getTotalVoiceCount, getTotalVoiceCountMax,
	     addTotalVoiceCountListener, removeTotalVoiceCountListener methods
	
	* API Changes
	   - Client: getAudioOutputDevices now returns AudioOutputDevice[]
	     instead of Integer[]; use getAudioOutputDeviceIDs instead
	   - Client: getSamplerChannels now returns SamplerChannel[]
	     instead of Integer[]; use getSamplerChannelIDs instead
	   - Client: getMidiInputDevices now returns MidiInputDevice[]
	     instead of Integer[]; use getMidiInputDeviceIDs instead
	   - SamplerChannel: getEngineName is replaced with getEngine
	     and returns SamplerEngine instance instead of String instance
	   - SamplerChannel: getInstrumentName now returns null instead of
	     "NONE" when there is no instrument loaded